fix spacing and add margins to contents of the main section

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ header {
   height: 15%;
   padding: 1%;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   background: rgb(63, 16, 82);
 }
 
@@ -30,8 +32,12 @@ header > div {
 main {
   flex: 1;
   min-height: 50%;
-  padding-top: 1rem;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  overflow: auto;
+}
+
+main > * {
+  margin: 1rem 0;
 }
