--- a/src/components/LeagueTable/LeagueTable.css
+++ b/src/components/LeagueTable/LeagueTable.css
@@ -1,5 +1,5 @@
 .table {
-  margin: 0 auto;
+  margin: 1rem auto;
   display: flex;
   flex-direction: column;
   max-width: 500px;
